💄 style: Improve UI, fix tests & rename source files
Yes a big bulky commit, I shouldn't but I ain't got time

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -4,19 +4,26 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Expire Tabs History</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@400..800&family=Quicksand:wght@300..700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="../utils/shared.css" />
+        <link rel="stylesheet" href="options.css" />
     </head>
     <body>
         <div class="container">
             <div class="header">
-                <h1>Closed Tabs History</h1>
-                <button id="clear">Clear History</button>
+                <h1>Expired Tabs History 🗃️</h1>
+                <button id="clear">Clear History 🧹</button>
             </div>
             <div class="search-container">
                 <input
                     type="text"
                     id="search"
-                    placeholder="Search history..."
+                    placeholder="Search history 🔍"
                 />
             </div>
             <ul id="history-list">
