--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -16,6 +16,13 @@
     <body>
         <div class="container">
             <h1>Expire Tabs ⏳</h1>
+
+            <div style="margin-bottom: 10px; text-align: center">
+                <button id="protect-toggle" style="width: 100%">
+                    Loading...
+                </button>
+            </div>
+
             <div class="form-group">
                 <label>Close tabs after:</label>
                 <div class="input-group">
@@ -56,7 +63,7 @@
                 <button id="save">Save Settings&nbsp;&nbsp;💾</button>
                 <div id="status"></div>
             </div>
-            <button id="history" class="secondary">
+            <button id="history" class="secondary-outline">
                 Expired Tabs History&nbsp;&nbsp;🗃️
             </button>
         </div>
