♻  refactor: Improve robustness, docs & tests

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -24,6 +24,7 @@
                     type="text"
                     id="search"
                     placeholder="Search history 🔍"
+                    aria-label="Search history"
                 />
             </div>
             <ul id="history-list">
