--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-group">
-                <label>Close tabs after:</label>
+                <label for="timeout">Close tabs after:</label>
                 <div class="input-group">
                     <input
                         type="number"
@@ -61,7 +61,7 @@
                     />
                 </div>
                 <button id="save">Save Settings&nbsp;&nbsp;💾</button>
-                <div id="status"></div>
+                <div id="status" aria-live="polite"></div>
             </div>
             <button id="history" class="secondary-outline">
                 Expired Tabs History&nbsp;&nbsp;🗃️
