🏗  build: refactor to use Rollup consistently

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -31,6 +31,6 @@
                 <!-- History items will be injected here -->
             </ul>
         </div>
-        <script src="options.js" type="module"></script>
+        <script src="options.bundle.js"></script>
     </body>
 </html>
