--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -67,6 +67,6 @@
                 Expired Tabs History&nbsp;&nbsp;🗃️
             </button>
         </div>
-        <script src="bundle.js"></script>
+        <script src="popup.bundle.js"></script>
     </body>
 </html>
