--- a/src/options/options.html
+++ b/src/options/options.html
@@ -10,6 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@400..800&family=Quicksand:wght@300..700&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="../utils/bootstrap.min.css" />
         <link rel="stylesheet" href="../utils/shared.css" />
         <link rel="stylesheet" href="options.css" />
     </head>
@@ -21,39 +22,53 @@
                     Download History as JSON 📥
                 </button>
             </div>
-            <div id="form-container">
-                <div class="form-group">
-                    <label for="deleteOlderThan">Delete older than:</label>
-                    <div class="input-group" style="gap: 10px">
-                        <input
-                            type="number"
-                            id="deleteOlderThan"
-                            min="1"
-                            placeholder="e.g. 30"
-                        />
-                        <select id="unit">
-                            <option value="minutes">Minutes</option>
-                            <option value="hours">Hours</option>
-                            <option value="days">Days</option>
-                        </select>
-                        <button
-                            class="secondary-outline"
-                            id="deleteOlderThanButton"
-                            disabled
-                        >
-                            Delete <span id="oldEntriesCount"></span> Old
-                            Entries
-                        </button>
-                    </div>
+            <div class="form-container mt-5 mx-0">
+                <div class="input-group row">
+                    <label for="deleteOlderThan" class="col-3">
+                        <strong>Delete entries older than</strong>
+                    </label>
+                    <input
+                        type="number"
+                        id="deleteOlderThan"
+                        min="1"
+                        placeholder="e.g. 30"
+                        class="col-3"
+                        step="1"
+                    />
+                    <select id="unit" class="col-3">
+                        <option value="minutes">Minutes</option>
+                        <option value="hours">Hours</option>
+                        <option value="days">Days</option>
+                    </select>
+                    <button
+                        class="secondary-outline col-3"
+                        id="deleteOlderThanButton"
+                        disabled
+                    >
+                        Delete <span id="oldEntriesCount"></span> Old Entries
+                    </button>
                 </div>
-                <div class="search-container input-group">
+                <div class="search-container input-group row">
+                    <label for="search" class="col-3">
+                        <strong
+                            ><abbr
+                                title="Spaces are treated as an 'AND' for substrings matching the URL or title.&#013;E.g. 'foo bar' = ('foo' in URL and 'bar' in URL) OR ('foo' in Title and 'bar' in Title)"
+                                >Filter</abbr
+                            >
+                            expired tabs&nbsp;&nbsp;🔍</strong
+                        >
+                    </label>
                     <input
                         type="text"
                         id="search"
-                        placeholder="Search history 🔍"
+                        placeholder="title or url"
                         aria-label="Search history"
+                        class="col-6"
                     />
-                    <button class="secondary-outline" id="deleteSearchResults">
+                    <button
+                        class="secondary-outline col-3"
+                        id="deleteSearchResults"
+                    >
                         Delete Search Results (<span id="results-count"></span>)
                     </button>
                 </div>
@@ -62,6 +77,7 @@
                 <!-- History items will be injected here -->
             </ul>
         </div>
+        <script src="../utils/bootstrap.bundle.js"></script>
         <script src="options.bundle.js"></script>
     </body>
 </html>
