--- a/src/options/options.html
+++ b/src/options/options.html
@@ -13,6 +13,31 @@
         <link rel="stylesheet" href="../utils/bootstrap.min.css" />
         <link rel="stylesheet" href="../utils/shared.css" />
         <link rel="stylesheet" href="options.css" />
+        <!-- icon -->
+        <link
+            rel="icon"
+            href="../icons/icon128.png"
+            type="image/png"
+            sizes="128x128"
+        />
+        <link
+            rel="icon"
+            href="../icons/icon96.png"
+            type="image/png"
+            sizes="96x96"
+        />
+        <link
+            rel="icon"
+            href="../icons/icon48.png"
+            type="image/png"
+            sizes="48x48"
+        />
+        <link
+            rel="icon"
+            href="../icons/icon16.png"
+            type="image/png"
+            sizes="16x16"
+        />
     </head>
     <body>
         <div class="container">
@@ -23,54 +48,72 @@
                 </button>
             </div>
             <div class="form-container mt-5 mx-0">
-                <div class="input-group row">
-                    <label for="deleteOlderThan" class="col-3">
-                        <strong>Delete entries older than</strong>
-                    </label>
-                    <input
-                        type="number"
-                        id="deleteOlderThan"
-                        min="1"
-                        placeholder="e.g. 30"
-                        class="col-3"
-                        step="1"
-                    />
-                    <select id="unit" class="col-3">
-                        <option value="minutes">Minutes</option>
-                        <option value="hours">Hours</option>
-                        <option value="days">Days</option>
-                    </select>
-                    <button
-                        class="secondary-outline col-3"
-                        id="deleteOlderThanButton"
-                        disabled
-                    >
-                        Delete <span id="oldEntriesCount"></span> Old Entries
-                    </button>
-                </div>
-                <div class="search-container input-group row">
-                    <label for="search" class="col-3">
-                        <strong
-                            ><abbr
-                                title="Spaces are treated as an 'AND' for substrings matching the URL or title.&#013;E.g. 'foo bar' = ('foo' in URL and 'bar' in URL) OR ('foo' in Title and 'bar' in Title)"
-                                >Filter</abbr
-                            >
-                            expired tabs&nbsp;&nbsp;🔍</strong
+                <div class="row g-3 align-items-center">
+                    <div class="col-12 col-md-3">
+                        <label for="deleteOlderThan" class="col-form-label">
+                            <strong>Delete entries older than</strong>
+                        </label>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <input
+                            type="number"
+                            id="deleteOlderThan"
+                            min="1"
+                            placeholder="e.g. 30"
+                            class="form-control"
+                            step="1"
+                        />
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <select id="unit" class="form-select">
+                            <option value="minutes">Minutes</option>
+                            <option value="hours">Hours</option>
+                            <option value="days">Days</option>
+                        </select>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <button
+                            class="secondary-outline w-100"
+                            id="deleteOlderThanButton"
+                            disabled
                         >
-                    </label>
-                    <input
-                        type="text"
-                        id="search"
-                        placeholder="title or url"
-                        aria-label="Search history"
-                        class="col-6"
-                    />
-                    <button
-                        class="secondary-outline col-3"
-                        id="deleteSearchResults"
-                    >
-                        Delete Search Results (<span id="results-count"></span>)
-                    </button>
+                            Delete <span id="oldEntriesCount"></span> Old
+                            Entries
+                        </button>
+                    </div>
+                </div>
+                <div class="search-container row g-3 align-items-center">
+                    <div class="col-12 col-md-3">
+                        <label for="search" class="col-form-label">
+                            <strong
+                                ><abbr
+                                    title="Spaces are treated as an 'AND' for substrings matching the URL or title.&#013;E.g. 'foo bar' = ('foo' in URL and 'bar' in URL) OR ('foo' in Title and 'bar' in Title)"
+                                    >Filter</abbr
+                                >
+                                expired tabs&nbsp;&nbsp;🔍</strong
+                            >
+                        </label>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <input
+                            type="text"
+                            id="search"
+                            placeholder="title or url"
+                            aria-label="Search history"
+                            class="form-control"
+                        />
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <button
+                            class="secondary-outline w-100"
+                            id="deleteSearchResults"
+                        >
+                            Delete Search Results (<span
+                                id="results-count"
+                            ></span
+                            >)
+                        </button>
+                    </div>
                 </div>
             </div>
             <ul id="history-list">
