📝 docs: Document keyboard shortcuts

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -79,6 +79,13 @@
                     "Protect Tab" button.
                 </p>
                 <p>
+                    <strong>Shortcuts:</strong>
+                    <br />
+                    - Toggle protection: <code>Alt+Shift+P</code>
+                    <br />
+                    - Open Popup: <code>Alt+Shift+A</code>
+                </p>
+                <p>
                     You can view the history of closed tabs by clicking the
                     "Expired Tabs History" button.
                 </p>
