♻  refactor: Use camelCase for JS-driven elements (2)

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -55,11 +55,11 @@
                             placeholder="e.g. 100"
                         />
                     </div>
-                    <button id="save">Save Settings&nbsp;&nbsp;💾</button>
-                    <div id="status" aria-live="polite"></div>
+                    <button id="saveBtn">Save Settings&nbsp;&nbsp;💾</button>
+                    <div id="statusMsg" aria-live="polite"></div>
                 </div>
             </div>
-            <button id="history" class="secondary-outline">
+            <button id="historyBtn" class="secondary-outline">
                 Expired Tabs History&nbsp;&nbsp;🗃️
             </button>
         </div>
