✨ feat: Shortcut to open the history

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -84,6 +84,8 @@
                     - Toggle protection: <code>Alt+Shift+P</code>
                     <br />
                     - Open Popup: <code>Alt+Shift+A</code>
+                    <br />
+                    - Open History: <code>Alt+Shift+H</code>
                 </p>
                 <p>
                     You can view the history of closed tabs by clicking the
